# universal-starter

./: .angular-cli.json  .bazelrc  .gitignore  BUILD.bazel  Gruntfile.ts  README.md  WORKSPACE  angular.json  app.json  empty.js  env_plugin.js  eval.js  gruntfile.js  gulpfile.js  gulpfile.ts  index.ng2.html  karma.conf.js  loader.js  manifest.yml  nguniversal-builders-0.1.0.tgz  nodemon.json  package-lock.json  package.json  postinstall.tsconfig.json  prerender.ts  sass-to-css.js  scss-config.js  server.ts  server.tsconfig.json  static.paths.js  system.config.js  tsconfig.aot.json  tsconfig.browser.json  tsconfig.json  tsconfig.node.json  tsd.json  tslint.json  typings.json  universal.d.ts  universal_pages_plugin.js  (+5 more)
cli/: .angular-cli.json  .gitignore  README.md  package-lock.json  package.json  prerender.js  prerender.ts  server.js  server.ts  webpack.server.config.js
cli/src/: main.server.ts  prerender.ts  server.ts
cli/src/app/: app.component.ts  app.module.ts
cli/src/app/lazy/: lazy.module.ts
custom-webpack/: .gitignore  README.md  webpack.config.js
custom-webpack/src/: main.server.ts  tsconfig.server.json
custom-webpack/src/modules/transfer-state/: server-transfer-state.module.ts  server-transfer-state.ts
custom-webpack/webpack/: helpers.js  webpack.aot.js  webpack.client.js  webpack.common.js  webpack.prod.js
e2e/: app.e2e-spec.ts  tsconfig.e2e.json
server/: BUILD.bazel  server.ts  tsconfig.json
src/: BUILD.bazel  __2.1.1.workaround.ts  __workaround.browser.ts  __workaround.node.ts  __workaround.ts  angular2-meta.ts  app-worker.ts  app.browser.module.ts  app.node.module.ts  app.ts  background.ts  bootstrap-worker.ts  bootstrap.ts  browser.module.ts  client.aot.ts  client.ts  environment.prod.ts  environment.ts  index.html  index.ng2.html  main.browser.ts  main.node.ts  main.prerender.ts  main.ts  node.module.ts  pollyfills.ts  require.config.js  routes.ts  server.aot.ts  server.routes.ts  server.ts  tsconfig-test.json  tsconfig.app.json  tsconfig.browser.json  tsconfig.json  tsconfig.server.json  tsconfig.spec.json  typings.d.ts
src/+app/: app-routing.module.ts  app.component.css  app.component.html  app.component.ts  app.module.ts
src/+app/+about/: about-routing.module.ts  about.component.ts  about.module.ts
src/+app/+github/: github-routing.module.ts  github.module.ts
src/+app/+github/repo-browser/: repo-browser.component.ts
src/+app/+github/repo-detail/: repo-detail.component.ts
src/+app/+github/repo-list/: repo-list.component.ts
src/+app/+github/shared/: shared.module.ts
src/+app/+home/: home-routing.module.ts  home.component.css  home.component.css.shim.ts  home.component.html  home.component.ts  home.module.ts
src/+app/+lazy/: lazy-routing.module.ts  lazy.component.ts  lazy.module.ts
src/+app/+login/: login-routing.module.ts  login.component.html  login.component.ts  login.module.ts
src/+app/+profile/: profile-routing.module.ts  profile.component.html  profile.component.ts  profile.module.ts
src/+app/+todo/: todo-routing.module.ts  todo.component.css  todo.component.html  todo.component.ts  todo.module.ts  todo.schema.ts
src/+app/shared/: api.service.ts  cache.service.ts  client-storage-provider.service.ts  cookie.browser.ts  cookie.node.ts  cookie.service.ts  node-storage-provider.service.ts  shared.module.ts  storage.browser.ts  storage.node.ts  storage.service.ts
src/+app/shared/auth/: auth.guard.ts  auth.service.ts  login.schema.ts  user.schema.ts
src/+app/shared/model/: model.service.ts
src/app/: BUILD.bazel  api.ts  app-routing.module.ts  app.browser.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.dev.ts  app.module.ts  app.node.module.ts  app.routes.ts  app.server.module.ts  app.ts  browser-app.module.ts  index.ts  puppy-love.component.ts  server-app.module.ts  universal-cache.ts
src/app/+about/: about.component.ts
src/app/+home/: home.component.ts
src/app/+lazy/: lazy.module.ts
src/app/about/: about-routing.module.ts  about.component.ts  about.module.ts
src/app/home/: home-routing.module.ts  home-view.component.ts  home.component.css  home.component.ts  home.module.ts  home.template.html
src/app/shared/: api.service.ts  cache.service.ts  shared.module.ts
src/app/shared/model/: model.service.ts
src/app/transfer_state/: transfer-state.interceptor.ts  transfer-state.service.ts
src/backend/: api.ts  auth.ts  cache.ts  db.ts  store.ts
src/environments/: environment.ts
src/modules/transfer-state/: browser-transfer-state.module.ts  server-transfer-state.ts  transfer-state.ts
src/platform-modules/: browser.module.ts  node.module.ts
src/server-app/: html.ts
src/server-only-app/: html.component.ts  server-only-app.ts
src/shared/meta/: angular2-meta.ts
webpack/: webpack.server.js
